--- a/app/components/product.hbs
+++ b/app/components/product.hbs
@@ -1,4 +1,9 @@
-<section class="product">
-<Product::Image @src={{@product.image}} @product={{@product}} @isDetails={{true}}/>
-<Product::Details @product={{@product}}/>
-</section>
+
+<div class="product-card">
+    <section class="product">
+        <Product::Image @src={{@product.image}} @product={{@product}} @isDetails={{true}} />
+        <Product::Details @product={{@product}} />
+
+    </section>
+    <Product::Button @product={{@product}} />
+</div>
