--- a/app/styles/_index.scss
+++ b/app/styles/_index.scss
@@ -1,10 +1,10 @@
 .cart-icon {
   color: rgb(255, 255, 255);
-  width: 35px;
-  height: 35px;
-  font-size: 18px;
+  width: 45px;
+  height: 45px;
+  font-size: 22px;
   border-radius: 50%;
-
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,4 +19,18 @@
   @media screen and (min-width: 650px) {
     width: 800px;
   }
+}
+
+.cart-count {
+  position: absolute;
+  top: 3px;
+  right: -2px;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 2px;
+  color: #fff;
+  background-color: red;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
 }
